# furrent

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  log.txt
.github/workflows/: cmake.yml  static.yml
extra/: debian-11.4.0-amd64-netinst.iso.torrent  debian-11.5.0-amd64-i386-netinst.iso.torrent  multi-file-1.torrent  multi-file-2.torrent
src/: bencode_parser.cpp  bencode_parser.hpp  bencode_value.cpp  bencode_value.h  bencode_value.hpp  config.hpp  decoder.cpp  decoder.h  furrent.cpp  furrent.h  furrent.hpp  furrent2.cpp  furrent2.hpp  hash.cpp  hash.hpp  main.cpp  peer.cpp  peer.hpp  strategy.hpp  tokenizer.cpp  tokenizer.h  torrent.cpp  torrent.hpp  torrent_manager.cpp  torrent_manager.h  torrent_manager.hpp  types.hpp
src/bencode/: bencode_parser.cpp  bencode_parser.hpp  bencode_value.cpp  bencode_value.hpp
src/download/: bitfield.cpp  bitfield.hpp  connection_pool.hpp  downloader.cpp  downloader.hpp  handshake.hpp  lender_pool.hpp  message.cpp  message.hpp  pool.hpp  socket.cpp  socket.hpp  socket_asio.hpp  util.cpp  util.hpp
src/gui/: colors.hpp  file_dialog.h  gui.cpp  gui.hpp  gui2.cpp
src/log/: logger.cpp  logger.hpp
src/mt/: channel.hpp  channel.inl  group.cpp  group.hpp  group.inl  queue.hpp  queue.inl  router.hpp  router.inl  sharing_queue.hpp  sharing_queue.inl  task.cpp  task.hpp  thread_pool.hpp  thread_pool.inl
src/platform/: io.cpp  io.hpp  linux.cpp
src/policy/: policy.hpp  policy.inl  queue.hpp  queue.inl
src/strategies/: uniform.hpp  uniform.inl
src/strategy/: global.hpp  local.cpp  local.hpp  random_uniform.cpp  round_robin.cpp  smaller_first.cpp  strategy.hpp  streaming.cpp
src/tasks/: gui.hpp  torrent.hpp  torrent_file_load.cpp  torrent_output_splitter.cpp  torrent_peer_resfresh.cpp  torrent_piece_download.cpp  torrent_task.cpp  torrent_task.hpp  torrent_task_file_load.cpp  torrent_task_peer_resfresh.cpp  torrent_task_piece_download.cpp
src/util/: result.hpp  result.inl  singleton.hpp  singleton.inl
test/: bencode_parser.cpp  bencode_value.cpp  bitfield.cpp  channel.cpp  download.cpp  downloader.cpp  entrypoint.cpp  furrent.cpp  group.cpp  group_channel.cpp  hash.cpp  lender_pool.cpp  message.cpp  mt.cpp  peer.cpp  policy_queue.cpp  queue.cpp  sharing_queue.cpp  socket.cpp  stealing.cpp  strategy.cpp  tfriend.hpp  tfriend_fw.hpp  torrent.cpp  util.cpp
test/faker/: alice_seeder.py  connect.py  connect_plus_piece.py  echo10.py  faker.py  friendly.py  handshake.py  slow.py
test/fixtures/: alice.txt.torrent
